# mtrix

./: Cargo.toml  Info.plist  README.md
src/: cli.rs  main.rs  stun.rs
src/cli_handlers/: jackin.rs  jackwait.rs  mod.rs
src/commands/: jackin.rs  jackwait.rs
src/handlers/: mod.rs  whoami.rs
src/masp/: message.rs  mod.rs  receiver.rs  sender.rs
src/networking/: peer.rs
src/tests/: ascii_frame_tests.rs  mod.rs
src/tests/assets/: jpeg_output.txt  mock.yuv  yuv_output.txt
src/video/: ascii_frame.rs  mod.rs  stream.rs
